Bug 795703 - Do not assert when calling do_GetWeakReference() on a nsISupport not capable of that. r=smaug,dougt